--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   http: ^0.13.3
   intl: ^0.17.0
   buddhist_datetime_dateformat_sns: ^1.0.7
+  shared_preferences: ^2.0.7
+  flutter_svg: ^0.17.1
+
 
 dev_dependencies:
   flutter_test:
@@ -42,7 +45,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  assets:
+    - assets/pay_icon.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
