--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
    <application
-        android:label="spotify_pay_flutter"
-        android:icon="@mipmap/ic_launcher">
+        android:label="ถึงเวลาจ่ายค่า Spotify รึยังน้าาา"
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
