--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.17.0
   buddhist_datetime_dateformat_sns: ^1.0.7
   shared_preferences: ^2.0.7
+  flutter_launcher_icons: ^0.9.2
   # flutter_svg: ^0.17.1
 
 dev_dependencies:
@@ -44,6 +45,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    # - assets/pay.png
+    - assets/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -80,3 +84,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/money.png"
